# Trition3D

./: .gitignore  .npmrc  CLAUDE.md  Cargo.toml  README.md  README_zh.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
applications/tauri/: Cargo.toml  tauri.conf.json
applications/tauri/src/: lib.rs
applications/web/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
applications/web/src/: App.svelte
applications/web/src/components/: AppBar.svelte  Arc.svelte  BottomBar.svelte  BrowserTree.svelte  Circle.svelte  Face.svelte  FadingGrid.svelte  FeatureHistory.svelte  FloatingPanel.svelte  Line.svelte  MainDisplay.svelte  Origin.svelte  PassiveSketch.svelte  Plane.svelte  Point2D.svelte  Point3D.svelte  Scene.svelte  SelectableSurface.svelte  Sketch.svelte  Solid.svelte  SolidItem.svelte  ToolBar.svelte
applications/web/src/components/controls/CadControls/: CadControls.svelte  useControlsContext.svelte.ts
applications/web/src/components/controls/CubeGizmo/: CubeGizmo.svelte
applications/web/src/components/features/: Extrusion.svelte  Plane.svelte  Point.svelte  Sketch.svelte
applications/web/src/components/tools/: NewCircle.svelte  NewLine.svelte  NewRectangle.svelte  Select.svelte
applications/web/src/worker/: cadmium.worker.ts  trition3d.worker.ts
docs/: FRONTEND_ARCHITECTURE.md  KERNEL_SURVEY.md
scripts/: debug-console.mjs  debug.spec.ts
