[package]
name = "cadmium-native"
version = "0.2.0"
description = "CADmium native desktop app"
authors = ["wjxjmj"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.0"

[dependencies]
tauri = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cadmium = { path = "../../packages/cadmium" }
