[package]
name = "trition3d-native"
version = "0.2.0"
description = "Trition3D native desktop app"
authors = ["wjxjmj"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trition3d = { path = "../../packages/trition3d" }
tauri-plugin-shell = "2.0"
